--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.5.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.github.incu6us.redis</groupId>
@@ -37,7 +38,7 @@
         <connection>scm:git:git://github.com/incu6us/redis-mock-template.git</connection>
         <developerConnection>scm:git:git@github.com:incu6us/redis-mock-template.git</developerConnection>
         <url>https://github.com/incu6us/redis-mock-template</url>
-        <tag>redis-mock-template-0.0.1</tag>
+        <tag>redis-mock-template-0.0.2</tag>
     </scm>
 
     <dependencies>
@@ -120,13 +121,13 @@
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
                 </configuration>
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>org.apache.maven.scm</groupId>-->
-<!--                        <artifactId>maven-scm-provider-gitexe</artifactId>-->
-<!--                        <version>1.11.2</version>-->
-<!--                    </dependency>-->
-<!--                </dependencies>-->
+                <!--                <dependencies>-->
+                <!--                    <dependency>-->
+                <!--                        <groupId>org.apache.maven.scm</groupId>-->
+                <!--                        <artifactId>maven-scm-provider-gitexe</artifactId>-->
+                <!--                        <version>1.11.2</version>-->
+                <!--                    </dependency>-->
+                <!--                </dependencies>-->
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
